--- a/extensions/chrome/common/css/quantum-core.css
+++ b/extensions/chrome/common/css/quantum-core.css
@@ -4,6 +4,82 @@
   src: url('../fonts/LatoOFL/Lato-Lig.ttf') format('truetype');
 }
 
+
+/*
+* Popup structure
+*/
+.quantum-text-editor-popup {
+  position: fixed;
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  color: rgb(0, 0, 0);
+  z-index: 9999999;
+  display: none;
+  transform: translateZ(0px);
+  transition: opacity 0.3s ease-in;
+  background: rgba(0, 0, 0, 0.5) !important;
+}
+
+.quantum-text-editor {
+    border-radius: 4px;
+    margin: 0;
+    min-width: 1020px;
+    min-height: 800;
+    font-family: 'Lato',sans-serif;
+
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%); /* IE 9 */
+    -webkit-transform: translate(-50%, -50%); /* Safari iOS */
+    transform: translate(-50%, -50%); /* Rest of browsers */
+}
+
+
+.quantum-text-editor-header {
+  padding: 15px;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.quantum-text-editor-title {
+    margin: 0;
+    line-height: 1.42857143;
+}
+
+.quantum-text-editor-close-btn {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
+
+    background: 0;
+    border: 0;
+}
+
+.quantum-text-editor-body {
+    position: relative;
+    padding: 15px;
+}
+
+
+
 /*
  * Base structure
  */
