--- a/extensions/chrome/common/css/quantum-core.css
+++ b/extensions/chrome/common/css/quantum-core.css
@@ -27,7 +27,7 @@
     border-radius: 4px;
     margin: 0;
     min-width: 800px;
-    min-height: 600;
+    min-height: 600px;
     font-family: 'Lato',sans-serif;
 
     background-color: #fff;
@@ -143,12 +143,17 @@
  * Base structure
  */
  .quantum-text-area {
-   width: 100%;
-   height: 100%;
+   min-width: 782px;
+   min-height: 492px;
    font-size: 14px;
    font-family: inherit;
    line-height: 24px;
    border: none;
+   padding-left: 10px;
+   padding-bottom: 40px;
+   padding-top: 10px;
+   left: 8px;
+   position: absolute;
  }
 
 
