Keypress processing added

--- a/extensions/chrome/common/css/quantum-core.css
+++ b/extensions/chrome/common/css/quantum-core.css
@@ -193,5 +193,10 @@
     color: #00a1de;
     background-color: #EEE;
     cursor: hand;
+}
 
+.quantum-text-help-list-elem-current {
+    color: #00a1de;
+    background-color: #EEE;
+    cursor: hand;
 }
