--- a/extensions/chrome/common/css/quantum-core.css
+++ b/extensions/chrome/common/css/quantum-core.css
@@ -4,6 +4,11 @@
   src: url('../../common/fonts/LatoOFL/Lato-Lig.ttf') format('truetype');
 }
 
+@font-face
+{
+  font-family: 'Lato';
+  src: url('../../common/fonts/LatoOFL/Lato-Reg.ttf') format('truetype');
+}
 
 /*
 * Popup structure
@@ -26,9 +31,9 @@
 
 .quantum-text-editor {
     margin: 0;
-    min-width: 800px;
-    min-height: 600px;
-    font-family: 'Lato-Light', Arial, sans-serif;
+    /*min-width: 800px;
+    min-height: 600px;*/
+    font-family: 'Lato', Arial, sans-serif;
 
     background-color: #fff;
     -webkit-background-clip: padding-box;
@@ -46,12 +51,14 @@
     -webkit-transform: translate(-50%, -50%); /* Safari iOS */
     transform: translate(-50%, -50%); /* Rest of browsers */
 
-    resize: both;
-    /*overflow: auto;*/
+    width: 80%;
+    height: 80%;
+    /*resize: both;
+    overflow: auto;*/
 }
 
 .quantum-text-editor-content {
-    font-family: 'Lato-Light', Arial, sans-serif;
+    font-family: 'Lato', Arial, sans-serif;
 }
 
 .quantum-text-editor-header {
@@ -68,11 +75,11 @@
 .quantum-text-editor-body {
     position: relative;
     padding: 15px;
+    font-family: 'Lato-Light', Arial, sans-serif;
 }
 
 .quantum-text-editor-footer {
-  padding: 5px 0px 5px 0px;
-  text-align: right;
+  padding: 5px;
   border-top: 1px solid #e5e5e5;
   position: absolute;
   bottom: 0;
@@ -93,14 +100,47 @@
   user-select: none;
 }
 
-.quantum-text-editor-footer-lang,
-.quantum-text-editor-footer-sentiment,
-.quantum-text-editor-footer-words,
-.quantum-text-editor-footer-btns {
-  display: inline-block;
-  padding-right: 5px;
-  width: 24%;
-  border-left: brown;
+.quantum-text-editor-btn-group {
+  border-right: 1px solid #cfcfcf;
+}
+
+.quantum-text-editor-right-btn-group {
+  float: right !important;
+}
+
+
+.quantum-text-editor-btn {
+    padding: 6px 12px;
+    margin-bottom: 0;
+
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+
+    margin-right: 5px;
+
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background: none;
+
+    color: #444;
+}
+
+.quantum-text-editor-btn:hover {
+    border: 1px solid #cfcfcf !important;
+
+    background-color: #EEE;
+    cursor: hand;
 }
 
 .quantum-text-editor-close-btn {
@@ -143,27 +183,73 @@
     font-family: inherit;
 }
 
+.quantum-text-editor-icon-language {
+    float: left!important;
+    background: url(../icons/globe.png) no-repeat scroll 0 0;
+    background-size: cover;
+    height: 20px;
+    width: 20px;
+    margin-right: 5px
+}
+
+.quantum-text-editor-icon-dictionary {
+    float: left!important;
+    background: url(../icons/dictionary.png) no-repeat scroll 0 0;
+    background-size: cover;
+    height: 20px;
+    width: 20px;
+    margin-right: 5px
+}
+
+.quantum-text-editor-btn-language-popup {
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    -webkit-transition: opacity .218s;
+    transition: opacity .218s;
+    background: #fff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.2);
+    cursor: default;
+    font-size: 13px;
+    margin: 0;
+    outline: none;
+    padding: 6px 0;
+    position: absolute;
+
+    top: -130px;
+    width: 450px;
+}
 
 /*
  * Base structure
  */
  .quantum-text-area {
-   min-width: 782px;
-   min-height: 492px;
-   font-size: 14px;
-   font-family: inherit;
-   line-height: 24px;
-   border: none;
-   padding-left: 10px;
-   padding-bottom: 40px;
-   padding-top: 10px;
-   left: 8px;
-   position: absolute;
+    /* min-width: 782px; */
+    /* min-height: 492px; */
+    font-size: 14px;
+    font-family: inherit;
+    line-height: 24px;
+    border: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    /* padding-bottom: 40px; */
+    /* padding-top: 10px; */
+    /* left: 8px; */
+    position: absolute;
+    font-family: 'Lato-Light', Arial, sans-serif;
+    width: 100%;
+    height: 86%;
+    /* bottom: 200px; */
+    top: 60px;
+    resize: none;
  }
 
  .quantum-text-area:focus {
     outline: none !important;
-    border:1px solid #e5e5e5;
+    /*border: 1px solid #e5e5e5;*/
+    border: none !important;
     box-shadow: none !important;
 }
 
@@ -183,8 +269,8 @@
   position: relative;
   z-index: 10001;
 
-  top: 30px;
-  left: 13px;
+  top: 28px;
+  left: 8px;
 
   width: 300px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
